--- a/SmallBusinessManagementSystem/SmallBusinessManagementSystem/SmallBusinessManagementSystem.csproj
+++ b/SmallBusinessManagementSystem/SmallBusinessManagementSystem/SmallBusinessManagementSystem.csproj
@@ -46,19 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager\PurchaseManager.cs" />
+    <Compile Include="Manager\SalesManager.cs" />
+    <Compile Include="Model\PurchaseModel.cs" />
+    <Compile Include="Model\SalesModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Purchase.cs">
+    <Compile Include="Repository\PurchaseRepository.cs" />
+    <Compile Include="Repository\SalesRepository.cs" />
+    <Compile Include="UI\PurchaseUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Purchase.Designer.cs">
-      <DependentUpon>Purchase.cs</DependentUpon>
+    <Compile Include="UI\PurchaseUI.Designer.cs">
+      <DependentUpon>PurchaseUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Sales.cs">
+    <Compile Include="UI\SalesUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Sales.Designer.cs">
-      <DependentUpon>Sales.cs</DependentUpon>
+    <Compile Include="UI\SalesUI.Designer.cs">
+      <DependentUpon>SalesUI.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -69,11 +75,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UI\Purchase.resx">
-      <DependentUpon>Purchase.cs</DependentUpon>
+    <EmbeddedResource Include="UI\PurchaseUI.resx">
+      <DependentUpon>PurchaseUI.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Sales.resx">
-      <DependentUpon>Sales.cs</DependentUpon>
+    <EmbeddedResource Include="UI\SalesUI.resx">
+      <DependentUpon>SalesUI.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -88,9 +94,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Manager\" />
-    <Folder Include="Repository\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
