--- a/SmallBusinessManagementSystem/SmallBusinessManagementSystem/SmallBusinessManagementSystem.csproj
+++ b/SmallBusinessManagementSystem/SmallBusinessManagementSystem/SmallBusinessManagementSystem.csproj
@@ -48,10 +48,12 @@
   <ItemGroup>
     <Compile Include="Manager\PurchaseManager.cs" />
     <Compile Include="Manager\SalesManager.cs" />
+    <Compile Include="Model\ProductDetails.cs" />
     <Compile Include="Model\PurchaseModel.cs" />
     <Compile Include="Model\SalesModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ConnectionRepository.cs" />
     <Compile Include="Repository\PurchaseRepository.cs" />
     <Compile Include="Repository\SalesRepository.cs" />
     <Compile Include="UI\PurchaseUI.cs">
@@ -81,6 +83,7 @@
     <EmbeddedResource Include="UI\SalesUI.resx">
       <DependentUpon>SalesUI.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\SmallBusinessManagementSystem.Model.ProductDetails.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
